
* The Mesh Server will require Java 11 with the release of 2.0.0. The runtime support for Java 8 will be dropped. The Mesh Java REST client will still be usable with Java 8.

[[TBD]]

icon:check[] OrientDB: The included OrientDB version has been updated to version `3.0.29`.

[[v1.4.2]]
== 1.4.2 (24.02.2020)

icon:check[] UI: The Gentics Mesh UI has been updated to version link:https://github.com/gentics/mesh-ui/blob/1.1.1/CHANGELOG.md#111---2020-02-19[1.1.1]

icon:check[] Core: The storage filesystem compatibility check has been made more reliable.

icon:check[] Core: Fixed a bug that caused errors during microschema migrations in certain situations.

[[v1.4.1]]
== 1.4.1 (19.01.2020)

icon:plus[] Core: The core Vert.x library was updated to version `3.8.5`.

icon:check[] OrientDB: The included OrientDB version has been updated to version `3.0.28`

icon:check[] Core: The handler for webroot updates is now running in a worker thread. This will prevent "Thread blocked" messages in the log.

icon:check[] Core: The debuginfo endpoint now correctly includes the `default-distributed-db-config.json` file.

[[v1.4.0]]
== 1.4.0 (24.01.2020)

icon:plus[] Security: User client certificate handling has been added to the Mesh Server.

The following settings have been added:

  * `server.sslPort` (Env: `MESH_HTTPS_PORT`) - SSL Port (Default: **8443**)
  * `server.http` (Env: `MESH_HTTP_ENABLE`) - Flag to enable http server (Default: **true**)
  * `server.clientAuthMode` (Env: `MESH_HTTP_SSL_CLIENT_AUTH_MODE`) - Authentication mode to control how client certificates should be handled. (Default: **none**)
  * `server.trustedCertPaths` (Env: `MESH_HTTP_SSL_TRUSTED_CERTS`) - List of certificates which will be trusted by the server.

The Gentics Mesh HTTPs server supports three client authentication modes:

* `none` - Reject client certificates during SSL handshake (**default**)