@@ -6,6 +6,7 @@ import static com.gentics.mesh.core.rest.error.Errors.error;
 import static com.gentics.mesh.core.rest.event.EventCauseAction.DELETE;
 import static io.netty.handler.codec.http.HttpResponseStatus.BAD_REQUEST;
 import static io.netty.handler.codec.http.HttpResponseStatus.CREATED;
+import static io.netty.handler.codec.http.HttpResponseStatus.FORBIDDEN;
 import static io.netty.handler.codec.http.HttpResponseStatus.NO_CONTENT;
 import static io.netty.handler.codec.http.HttpResponseStatus.OK;
 
@@ -25,6 +26,7 @@ import com.gentics.madl.tx.TxAction0;
 import com.gentics.madl.tx.TxAction1;
 import com.gentics.mesh.context.BulkActionContext;
 import com.gentics.mesh.context.InternalActionContext;
+import com.gentics.mesh.context.impl.InternalRoutingActionContextImpl;
 import com.gentics.mesh.core.data.MeshCoreVertex;
 import com.gentics.mesh.core.data.page.TransformablePage;
 import com.gentics.mesh.core.data.relationship.GraphPermission;
@@ -44,6 +46,7 @@ import com.gentics.mesh.util.UUIDUtil;
 import io.reactivex.Single;
 import io.vertx.core.logging.Logger;
 import io.vertx.core.logging.LoggerFactory;
+import io.vertx.ext.web.RoutingContext;
 
 /**
  * Common request handler methods which can be used for CRUD operations.
@@ -366,4 +369,13 @@ public class HandlerUtilities {
 		}
 	}
 
+
+	public void requiresAdminRole(RoutingContext context) {
+		InternalRoutingActionContextImpl rc = new InternalRoutingActionContextImpl(context);
+		if (database.tx(() -> !rc.getUser().hasAdminRole())) {
+			throw error(FORBIDDEN, "error_admin_permission_required");
+		} else {
+			context.next();
+		}
+	}
 }
